# DSCI524_Group16

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  scaling.py
.github/workflows/: ci-cd.yml
data/: iris_train.csv  iris_valid.csv  toy_dataset.csv
docs/: Makefile  conf.py  example.ipynb  make.bat
src/mds_pyknnclassifier/: __init__.py
src/pkg_pyknnclassifier/: calculate_distance.py  data_loading.py  evaluate.py  find_neighbors.py  predict.py  scaling.ipynb  scaling.py
src/pyknn_mlmodel/: __init__.py
tests/: test-calculate_distance.py  test_data_loading.py  test_evaluate.py  test_find_neighbors.py  test_mds_pyknnclassifier.py  test_pkg_pyknnclassifier.py  test_predict.py  test_pyknn_mlmodel.py  test_scaling.py
