[tool.poetry]
name = "pyknn_mlmodel"
version = "0.1.0"
description = "A k-Nearest Neighbors (KNN) classifier for Python."
authors = ["Bill Wan, Sho Inagaki, Vincent Zhang, Weiran Zhao"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
